เพิ่ม tab active

--- a/test.html
+++ b/test.html
@@ -8,5 +8,10 @@
 <body>
     Hello World My Name is thiraphat
     <p>My nickname is off</p>
+    <style type="text/css">
+        body {
+          color: purple;
+          background-color: #d8da3d }
+        </style>
 </body>
 </html>
